--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>electron-compile - GitHub Universe 2016</title>
-  <link rel="stylesheet" type="text/css" href="styles/main.less">
+    <meta charset="UTF-8">
+    <title>OLI GoogleDocs Converter</title>
+    <link rel="stylesheet" type="text/css" href="styles/main.less">
 </head>
 <body>
-  <div id="app"></div>
-  <script src="main.js"></script>
+<div id="app"></div>
+<script src="main.js"></script>
 </body>
 </html>
